fixed the single number input after the results has been calucated bug and added an ellipses css rule for overflowed data input

--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ body {
     padding-right: 10px;
     box-sizing: border-box;
     border: none;
+    width: 200px;
+      /*white-space: nowrap;*/
+      overflow: hidden;
+      text-overflow: ellipsis;
   }
   .onOff{
     width: 100%;
